# project

./: .clang-format  CMakeLists.txt  README.md  fibonacci.cpp  main.cpp  program  tests.cpp  texts.cpp
src/: fibonacci.cpp  main.cpp  tests.cpp
tool/: format  format_code
